# formulaOneTyreDeg

./: .gitignore  Makefile  README.md  demo.py  mvp.md  prd.md  pyproject.toml
models/degradation/: params.json
src/api/: inference.py  main.py
src/features/: build_features.py  clean.py
src/ingestion/: ergast_ingest.py  fastf1_ingest.py  openf1_ingest.py  telemetry_ingest.py
src/models/: baseline.py  callbacks.py  lstm_model.py  train_degradation.py  train_lstm.py
src/static/: dashboard.html
