[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-tirebrain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.31",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "scikit-learn>=1.4",
    "category-encoders>=2.6",
    "ruptures>=1.1",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "tqdm>=4.66",
    "polars>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
